tp4-deployment-app/cicd/tekton/infra/ns.yaml
apiVersion: v1 
kind: Namespace 
metadata: 
  name: eazytraining
  labels: 
    app: training
    argocd.argoproj.io/managed-by: openshift-gitops
spec: {}
