tp4-deployment-app/cicd/tekton/infra/route-elistener.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: sample-httpd-listener
  name: el-gitops-dev-elistener
  namespace: eazytraining
spec:
  port:
    targetPort: http-listener
  to:
    kind: ""
    name: el-gitops-dev-elistener
